# onnxruntime-inference

onnx_inference_android_app/: settings.gradle
onnx_inference_android_app/app/: build.gradle
onnx_inference_android_app/app/src/main/java/com/example/onnxinferinjava/: MainActivity.java  OnnxModel.java  XgbcOnnxModel.java
onnx_inference_android_app/gradle/: libs.versions.toml
onnx_inference_android_app/gradle/wrapper/: gradle-wrapper.properties
onnx_inference_android_native/: CMakeLists.txt  README.md  main.cc
onnx_inference_cpp/: .gitignore  README.md  compile_run_dynamic.sh  compile_run_static.sh  init.sh
onnx_inference_cpp_cmake/: CMakeLists.txt  README.md  compile_run.sh  main.cpp  onnx_inference_engine.cpp  onnx_inference_engine.h
onnx_inference_cpp_cmake/cmake/: onnxruntime.cmake
onnx_inference_cpp_dynamic/: CMakeLists.txt  README.md  compile_run.sh  main.cc
onnx_inference_cpp_static/: .gitignore  CMakeLists.txt  README.md  compile_run.sh  main.cc
